add table to page

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 <body>
     
     <div id="buttons"></div>
-    <div id="root"></div>
+    <div id="table"></div>
     <div id="modal"></div>
 
     <script type="module" src="../src/index.js" ></script>
